examples/test/testpolicy4084.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4084
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key12: value25
      key18: value8
      key25: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value20
          key38: value37
      podSelector:
        matchLabels:
          key7: value29
          key20: value30
